@@ -4,86 +4,60 @@ import static client.scenes.MainCtrl.currentGameID;
 import static java.util.Map.entry;
 
 import client.MyFXML;
-import client.communication.ActivityImageCommunication;
 import client.communication.GameCommunication;
 import client.communication.Utils;
 import client.utils.FileUtils;
 import client.utils.SceneController;
 import com.google.inject.Inject;
 import commons.Person;
+import commons.Question;
 import commons.QuestionTypeA;
+import commons.QuestionTypeB;
+import commons.QuestionTypeC;
+import commons.QuestionTypeD;
 import commons.User;
-import java.util.ArrayList;
+import java.util.Date;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.stream.Collectors;
+
 import javafx.collections.FXCollections;
 import javafx.concurrent.Service;
 import javafx.concurrent.Task;
 import javafx.fxml.FXML;
-import javafx.scene.control.Button;
+import javafx.scene.Node;
 import javafx.scene.control.ListCell;
 import javafx.scene.control.ListView;
 import javafx.scene.control.ProgressBar;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
-import javafx.scene.text.Text;
+import javafx.scene.layout.StackPane;
 
-// TODO: this whole controller needs to be reworked bc it's a mess and it's very hard to work with
 public class GameScreenCtrl extends SceneController {
 
     private String username;
 
-    private static User user;
     private static int qIndex;
-    private static QuestionTypeA activeQuestion;
+    private Question activeQuestion;
 
-    private static final int TIME_TO_NEXT_ROUND = 3;
+    private static final double TIME_TO_NEXT_ROUND = 5;
 
     @FXML
     private ImageView menuButton;
 
-    @FXML
-    private ImageView image1;
 
     @FXML
-    private ImageView image2;
-
-
-    @FXML
-    private ImageView image3;
-
-
+    private StackPane questionHolder;
 
     @FXML
     private ProgressBar progressBar;
 
-    @FXML
-    private Text activityText1;
 
-    @FXML
-    private Text activityText2;
-
-    @FXML
-    private Text activityText3;
 
     @FXML
     private ListView<String> currentLeaderboard;
 
 
-    @FXML
-    private Button button1;
-
-    @FXML
-    private Button button2;
-
-    @FXML
-    private Button button3;
-
-    @FXML
-    private Button button4;
-
-    @FXML
-    private Text questionText;
 
     @FXML
     private ImageView emoji1;
@@ -92,18 +66,13 @@ public class GameScreenCtrl extends SceneController {
     @FXML
     private ImageView emoji3;
 
-    private int correctAnswer;
+    private Long currentTime = 0L;
 
+    private int questionNumber = -1;
     private final Map<String, Image> emojis = Map.ofEntries(
             entry("emoji1", new Image("client/images/emoji1.png")),
             entry("emoji2", new Image("client/images/emoji2.png")),
-            entry("emoji3", new Image("client/images/emoji3.png"))
-    // TODO: change emoji names to be more descriptive (and maybe 1 add more)
-    );
-
-    // GameScreenLeaderboardEntry[] names = {new GameScreenLeaderboardEntry("Dodi"),
-    // new GameScreenLeaderboardEntry("John"),new GameScreenLeaderboardEntry("boom")};
-    private ArrayList<Button> buttonList = new ArrayList<>();
+            entry("emoji3", new Image("client/images/emoji3.png")));
 
     @Inject
     public GameScreenCtrl(MyFXML myFxml) {
@@ -111,7 +80,6 @@ public class GameScreenCtrl extends SceneController {
     }
 
     public static void init(User user1) {
-        user = user1;
     }
 
     /**
@@ -130,17 +98,34 @@ public class GameScreenCtrl extends SceneController {
      * Start a time for TIME_TO_NEXT_ROUND seconds and bind to progressbar.
      */
     public void countDown() {
+        System.out.println("the real real currentime is " + currentTime);
+        Double threadSleepTime = 10D;
+        Long difference = currentTime - new Date().getTime();
+
         final Service<Integer> countDownThread = new Service<>() {
+
             @Override
             protected Task<Integer> createTask() {
                 return new Task<Integer>() {
                     @Override
                     protected Integer call() {
-                        int i;
-                        for (i = TIME_TO_NEXT_ROUND * 100; i > 0; i--) {
-                            updateProgress(i, TIME_TO_NEXT_ROUND * 100);
+
+                        Double remainder = (((TIME_TO_NEXT_ROUND * 100D)
+                            - ((new Date().getTime() - currentTime) / threadSleepTime)));
+                        System.out.println("the remainder is " + remainder);
+                        System.out.println(new Date().getTime() - currentTime + "subtract");
+
+                        int i = remainder.intValue();
+
+                        while (i >= 0) {
+
+                            System.out.println(progressBar.getProgress() + "foo");
+                            updateProgress(i, TIME_TO_NEXT_ROUND * 100D);
                             try {
-                                Thread.sleep(10);
+
+                                i--;
+                                //System.out.println(i);
+                                Thread.sleep(threadSleepTime.intValue());
                             } catch (InterruptedException e) {
                                 e.printStackTrace();
                             }
@@ -161,40 +146,49 @@ public class GameScreenCtrl extends SceneController {
      * refreshes the question.
      */
     public void refreshQuestion() {
+        questionNumber++;
+        GameCommunication.send("/app/time/" + MainCtrl.currentGameID
+            + "/" + questionNumber, "foo");
+        GameCommunication.send("/app/time/get/" + MainCtrl.currentGameID
+            + "/" + questionNumber, "foo");
+        System.out.println("the real currentime is " + currentTime);
         // TODO: place this in the right place when answer checking is implemented
         myFxml.showScene(MatchLeaderboardCtrl.class);
+
         activeQuestion = client.communication.GameCommunication
             .getQuestion(currentGameID, qIndex);
+        //System.out.println(GameCommunication.getAnswer(currentGameID, qIndex));
         qIndex++;
-        questionText.setText(activeQuestion.displayText());
-        activityText1.setText(activeQuestion.getActivity1().getActivityText());
-        activityText2.setText(activeQuestion.getActivity2().getActivityText());
-        activityText3.setText(activeQuestion.getActivity3().getActivityText());
-        long energyConsumption1 = activeQuestion.getActivity1().getValue();
-        long energyConsumption2 = activeQuestion.getActivity2().getValue();
-        long energyConsumption3 = activeQuestion.getActivity3().getValue();
-        final long[] consumptions = {energyConsumption1, energyConsumption2, energyConsumption3};
-        image1.setImage(ActivityImageCommunication.getImageFromId(
-            activeQuestion.getActivity1().getImageId()));
-        image2.setImage(ActivityImageCommunication.getImageFromId(
-            activeQuestion.getActivity2().getImageId()));
-        image3.setImage(ActivityImageCommunication.getImageFromId(
-            activeQuestion.getActivity3().getImageId()));
-        int i = -1;
-        long biggest = -1;
-        for (long consumption: consumptions) {
-            i++;
-            if (consumption > biggest) {
-                biggest = consumption;
-                correctAnswer = i;
-            }
+
+        switch (activeQuestion.getQuestionType()) {
+            case 0:
+                myFxml.get(QuestionTypeAComponentCtrl.class)
+                        .loadComponent((QuestionTypeA) activeQuestion);
+
+                break;
+            case 1:
+                myFxml.get(QuestionTypeBComponentCtrl.class)
+                        .loadComponent((QuestionTypeB) activeQuestion);
+
+                break;
+            case 2:
+                myFxml.get(QuestionTypeCComponentCtrl.class)
+                        .loadComponent((QuestionTypeC) activeQuestion);
+
+                break;
+            case 3:
+                myFxml.get(QuestionTypeDComponentCtrl.class)
+                        .loadComponent((QuestionTypeD) activeQuestion);
+
+                break;
+
+            default:
+                break;
+
         }
         countDown();
 
-
     }
-
-
 
     /**
      * When the first emoji is clicked it is sent to the server and also by whom it has been sent.
@@ -205,49 +199,6 @@ public class GameScreenCtrl extends SceneController {
         GameCommunication.send("/app/emoji/" + currentGameID
             +
             "/" + MainCtrl.username, emojiInfo);
-    }
-
-    /**
-     * method to call when answer A is pressed.
-     */
-    public void answerApressed() {
-        if (correctAnswer == 0) {
-            awardPoints();
-        } else {
-            System.out.print("dumbass");
-        }
-    }
-
-    /**
-     * method to call when answer B is pressed.
-     */
-    public void answerBpressed() {
-        if (correctAnswer == 1) {
-            awardPoints();
-        } else {
-            System.out.print("dumbass");
-        }
-    }
-
-    /**
-     * method to call when answer C is pressed.
-     */
-    public void answerCpressed() {
-        if (correctAnswer == 2) {
-            awardPoints();
-        } else {
-            System.out.print("dumbass");
-        }
-    }
-
-    /**
-     * method to award points to client.
-     */
-    public void awardPoints() {
-        // TODO award points
-
-
-        refreshQuestion();
     }
 
     /**
@@ -283,7 +234,7 @@ public class GameScreenCtrl extends SceneController {
         // init the player list (cells)
         currentLeaderboard.setItems(FXCollections.observableList(
             Utils.getAllUsers(currentGameID)
-                    .stream().map(User::getUsername).toList()
+                    .stream().map(User::getUsername).collect(Collectors.toList())
         ));
 
         // register websockets events on receiving messages
@@ -314,37 +265,60 @@ public class GameScreenCtrl extends SceneController {
 
     @Override
     public void show() {
+
         HashMap<String, Object> properties = new HashMap<>();
         properties.put("currentGameID", currentGameID);
         properties.put("username", MainCtrl.username);
         // connect via websockets
         GameCommunication.connect(Utils.serverAddress, properties);
 
-        initImages();
-        //progressBar = (ProgressBar) mainCtrl.getCurrentScene().lookup("#progressBar");
-        //progressBar.setProgress(1F);
-        // Question_text = new Text("foo");
-        buttonList.add(button1);
-        buttonList.add(button2);
-        buttonList.add(button3);
-        buttonList.add(button4);
+        GameCommunication.registerForMessages("/time/get/receive/" + MainCtrl.currentGameID,
+            long.class, o -> {
+                currentTime = o;
+                System.out.println(o);
+                System.out.println("time/get/receive");
+
+            });
 
         setupPlayerList();
 
         qIndex = 0;
 
         GameCommunication.registerForMessages("/game/receive/" + currentGameID,
-            Map.class,o -> {
-                System.out.println(o.toString());
-                System.out.println("foo");
-            });
+                Map.class, o -> {
+                    System.out.println(o.toString());
+                    System.out.println("foo");
+                });
         HashMap<String, Object> userProperties = new HashMap<String, Object>();
         userProperties.put("currentGameID", currentGameID);
         userProperties.put("username", MainCtrl.username);
-        GameCommunication.send("/app/game/" + currentGameID + "/"
+        GameCommunication.send("/app/game/" + MainCtrl.currentGameID + "/"
             + MainCtrl.username, userProperties);
+        System.out.println("the time is " + currentTime);
         refreshQuestion();
 
         showScene();
+    }
+
+    public void showQuestion(Node node) {
+        questionHolder.getChildren().setAll(node);
+    }
+
+    /**
+     * Sends answer to the server.
+     * Gets reward - bonus for answering a question
+     * reward is in range [0, 100]
+     *
+     * @param answer - answer from the user
+     */
+    public void sendAnswer(long answer) {
+        int reward = GameCommunication.processAnswer(currentGameID, MainCtrl.username,
+                qIndex - 1, answer, getTimeLeft());
+        System.out.println(reward);
+        refreshQuestion();
+    }
+
+    private int getTimeLeft() {
+        return (int) Math.round(progressBar.getProgress() * 100);
     }
 }
